Fix height for Playlist Container on smaller screens

--- a/client/src/components/PlayList/PlayList.css
+++ b/client/src/components/PlayList/PlayList.css
@@ -63,6 +63,8 @@
 @media only screen and (max-width: 1020px) {
   .Playlist {
     width: 90%;
+    height: 50%;
+    margin-bottom: 2rem;
   }
 }
 
