--- a/client/src/components/SearchResults/SearchResults.css
+++ b/client/src/components/SearchResults/SearchResults.css
@@ -121,6 +121,7 @@
 @media only screen and (max-width: 1020px) {
   .SearchResults {
     width: 90%;
+    height: 50%;
     margin-bottom: 2rem;
   }
 }
